--- a/12.Pokedex/index.html
+++ b/12.Pokedex/index.html
@@ -27,6 +27,9 @@
         alt=""
       />
     </header>
+    <div id="contenedor-carga">
+      <div id="carga"></div>
+  </div>
     <main></main>
     <p><a class="more" onclick="agregar()"><i class="fas fa-plus-circle"></i></a></p>
     <!-- NO BORRAR NI ALTERAR EL ORDEN DE LOS SCRIPTS -->
