--- a/5.EjercicioLogin/index.html
+++ b/5.EjercicioLogin/index.html
@@ -10,7 +10,8 @@
   <body>
     <main>
       <h1>Iniciar Sesión</h1>
-      <form>
+      <div id="logout"></div>
+      <form id="sesion">
         <div class="input-container">
           <label for="email">Email</label>
           <input
